- Poker Tracker symbols no longer permanently fail (always return 0) after red button/
  sitting out. (Thanks, Winngy) (quiqsilver)
  
- Erratic problems with attempting to retrieve Poker Tracker data when using Manual Mode
  are now fixed. (Thanks, eesahe) (quiqsilver)

- Correcting possible issue that can cause a crash. Worker threads should not be playing with windows (SetWindowText) - Spew

MAINTENANCE: 
- A single OpenHoldem Formula file (*.ohf) instead of *.whf and *.whx.
  The WinHoldem format is still recognized, but gets converted automatically 
  when saved. (TheHighFish)

- Treating f$evrais and f$evcall now as user defined functions,
  as they are not necessary for the majority of poker bots 
  (only for the default one).
  f$delay and f$chat became standard functions, as they could have 
  a greater impact on the behaviour of bots. 
  Slightly modified default bot to reflect this change. (TheHighFish) 
  
- Added parameter validity checking on all functions in scraper.cpp.
  (OpenHoldem)
  
- Random button clicking logic changed to further improve distribution of
  click points in Autoplayer::get_click_point.  (Indiana/OpenHoldem)
  


v1.9.0 2008-05-16
=================
NEW STUFF:
- Autoplayer Tracing - In Edit->Preferences,Logging you can now enable tracing of specific
  functions used by the Autoplayer.  When enabled you will see the results of all functions
  and all the symbols (and their values) that were accessed by those functions in oh?.log. (Spew)
  
- Group UDFs - The formula dialog will now place functions whose name match up to the 
  first "_" together in the left tree. 
  For example, f$river_raise, f$river_call will be grouped under the group named "river".  
  This is optional and can be turned on under View->Group UDFs menu (Spew)

- Display Log symbol on OH screen.  If log symbol are enabled in OH preferences, 
  the information box will be enlarge to allow for 4 log symbols to be displayed while OH is running (Spew)
